[gd_scene load_steps=3 format=3 uid="uid://dooqfxsptcbb"]

[ext_resource type="Script" path="res://Scenes/Enemies/Spawner.gd" id="1_vso5h"]

[sub_resource type="Curve2D" id="Curve2D_nllab"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -15, -15, 0, 0, 0, 0, 175, -15, 0, 0, 0, 0, 175, 159, 0, 0, 0, 0, -15, 159, 0, 0, 0, 0, -15, -15)
}
point_count = 5

[node name="Spawner" type="Node"]
script = ExtResource("1_vso5h")

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_nllab")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(-15, -15)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
